# agritech

./: .claudeignore  .env.dokploy.example  .env.dokploy.satellite.example  .env.example  .gitignore  00000000000000_consolidated_schema.sql  ABSOLUTE_PRODUCTION_SIGN_OFF.md  ACCOUNTING_ALL_PAGES_FIXED.md  ACCOUNTING_BILLING_DUPLICATE_ANALYSIS.md  ACCOUNTING_BILLING_UX_ANALYSIS.md  ACCOUNTING_EDGE_FUNCTIONS.md  ACCOUNTING_IMPLEMENTATION_GUIDE.md  ACCOUNTING_IMPLEMENTATION_PROGRESS.md  ACCOUNTING_LAYOUT_FIXED.md  ACCOUNTING_LAYOUT_UPDATE_GUIDE.md  ACCOUNTING_MODULE_SPEC.md  ACCOUNTING_MODULE_SUMMARY.md  ACCOUNTING_QUICK_START.md  ACCOUNTING_ROUTES_COMPLETED.md  ACCOUNTING_SIDEBAR_ADDED.md  ACCOUNTING_STANDALONE_ROUTES.md  ACCOUNTING_TRANSITIONS_REVIEW.md  ACCOUNTING_UI_EDGE_FUNCTIONS_UPDATE.md  ADAPTIVE_UI.md  AGENTS.md  AGROMIND_IA_INTEGRATION_SPECS_v2.docx  ALL_CRUD_COMPLETE_FINAL.md  ALL_CRUD_OPERATIONS_VERIFIED.md  ALL_DONE_SUMMARY.md  ALL_FIXES_APPLIED.md  ANALYSIS_INDEX.md  AOI_CLOUD_MASKING_FIX.md  APPLY_MIGRATION_NOW.md  ARCHITECTURE_IMPROVEMENTS.md  AUDIT_feature-1768647044740-01h6xvpju.md  Agriprofy_Investor_Roadmap.pptx  Agriprofy_Presentation_Extract.md  Agritech Production (1).xlsx  Analyses UM6P.xlsx  B2B_Marketing_Plan.pptx  (+232 more)
.automaker/: active-branches.json  categories.json
.brv/: config.json  instance.json
.claude/: accounting.md  architecture.md  database.md  frontend.md  launch.json  ralph-loop.local.md  satellite.md  settings.local.json
.cursor/: README.md  SUBMISSION_GUIDE.md  instructions.md  mcp.json  skill-manifest.json  skill.json
project/src-tauri/: Cargo.toml  tauri.conf.json
project/src-tauri/icons/: icon.icns
project/src-tauri/src/: main.rs
project/src-tauri/src/commands/: auth.rs  data.rs  farms.rs  import.rs  mod.rs  organizations.rs  parcels.rs
project/src-tauri/src/db/: mod.rs  schema.sql
(+4668 files in other folders)
